--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,19 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'T'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [4], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m route \u001b[38;5;241m=\u001b[39m MoonboardRoute\u001b[38;5;241m.\u001b[39mfrom_hold_strings(others, start_holds, end_hold)\n\u001b[0;32m      6\u001b[0m xd \u001b[38;5;241m=\u001b[39m {route\u001b[38;5;241m.\u001b[39mget_id_str(): route\u001b[38;5;241m.\u001b[39mto_dict()}\n\u001b[1;32m----> 7\u001b[0m seq \u001b[38;5;241m=\u001b[39m \u001b[43mproduce_sequence\u001b[49m\u001b[43m(\u001b[49m\u001b[43mroute\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_id_str\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mxd\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(route)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(seq)\n",
-      "File \u001b[1;32mc:\\Users\\dkenp\\source\\repos\\GeneticBoulders\\MoonBoardRNN\\BetaMove\\preprocessing_helper.py:690\u001b[0m, in \u001b[0;36mproduce_sequence\u001b[1;34m(keyNum, X_dict, n_return, printout)\u001b[0m\n\u001b[0;32m    688\u001b[0m moonboardTest \u001b[39m=\u001b[39m X_dict[keyNum]\n\u001b[0;32m    689\u001b[0m \u001b[39m#moonboardTestUrl = MoonBoard_2016_withurl[keyNum]\u001b[39;00m\n\u001b[1;32m--> 690\u001b[0m testbeta \u001b[39m=\u001b[39m beta(moonboardTest\u001b[39m.\u001b[39;49mT)\n\u001b[0;32m    691\u001b[0m status \u001b[39m=\u001b[39m [beta(moonboardTest\u001b[39m.\u001b[39mT), beta(moonboardTest\u001b[39m.\u001b[39mT)]\n\u001b[0;32m    692\u001b[0m status[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39maddStartHolds(\u001b[39m0\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'T'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data with key first contains error\n",
+      "result saved.\n",
+      "MoonboardRoute(holds=[MoonBoardRouteHold(row=7, col='C', is_start=False, is_end=False), MoonBoardRouteHold(row=9, col='D', is_start=False, is_end=False), MoonBoardRouteHold(row=11, col='B', is_start=False, is_end=False), MoonBoardRouteHold(row=13, col='E', is_start=False, is_end=False), MoonBoardRouteHold(row=15, col='B', is_start=False, is_end=False), MoonBoardRouteHold(row=18, col='D', is_start=False, is_end=False), MoonBoardRouteHold(row=5, col='F', is_start=True, is_end=False), MoonBoardRouteHold(row=18, col='D', is_start=False, is_end=True)], id=UUID('26d2b7ba-4e19-11ed-a0a2-3065ecc711c3'))\n",
+      "{'X_dict_seq': {}, 'list_fail': ['first']}\n"
      ]
     }
    ],
