finished x-vector transformation

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -4,29 +4,45 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'find_route_beta' from 'MoonBoardRNN.BetaMove.BetaMove' (/home/daniel/GeneticBoulders/MoonBoardRNN/BetaMove/BetaMove.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mstructs\u001b[39;00m \u001b[39mimport\u001b[39;00m MoonboardRoute\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mMoonBoardRNN\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mBetaMove\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpreprocessing_helper\u001b[39;00m \u001b[39mimport\u001b[39;00m generate_organized_sequence_data\n\u001b[0;32m----> 3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mMoonBoardRNN\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mBetaMove\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mBetaMove\u001b[39;00m \u001b[39mimport\u001b[39;00m find_route_beta\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'find_route_beta' from 'MoonBoardRNN.BetaMove.BetaMove' (/home/daniel/GeneticBoulders/MoonBoardRNN/BetaMove/BetaMove.py)"
+     ]
+    }
+   ],
    "source": [
     "from structs import MoonboardRoute\n",
     "from MoonBoardRNN.BetaMove.preprocessing_helper import generate_organized_sequence_data\n",
-    "from MoonBoardRNN.BetaMove.BetaMove import find_route_beta"
+    "from MoonBoardRNN.BetaMove.BetaMove import route_to_x_vectors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "(3, 18)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/home/tyebkhad/GeneticBoulders/testing.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m others \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mC7\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mD9\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mB11\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mE13\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mB15\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mD18\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W1sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m route \u001b[39m=\u001b[39m MoonboardRoute\u001b[39m.\u001b[39mfrom_hold_strings(others, start_holds, end_hold)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W1sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m beta \u001b[39m=\u001b[39m find_route_beta(route)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W1sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(route)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W1sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mprint\u001b[39m(beta)\n",
-      "File \u001b[0;32m~/GeneticBoulders/MoonBoardRNN/BetaMove/BetaMove.py:8\u001b[0m, in \u001b[0;36mfind_route_beta\u001b[0;34m(route)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfind_route_beta\u001b[39m(route: MoonboardRoute):\n\u001b[0;32m----> 8\u001b[0m \tdata_dict \u001b[39m=\u001b[39m {route\u001b[39m.\u001b[39mget_id_str(): route_to_x_vectors(route)}\n\u001b[1;32m      9\u001b[0m \t\u001b[39mreturn\u001b[39;00m ph\u001b[39m.\u001b[39mproduce_sequence(route\u001b[39m.\u001b[39mId, data_dict)\n",
-      "File \u001b[0;32m~/GeneticBoulders/MoonBoardRNN/rnn_helpers.py:23\u001b[0m, in \u001b[0;36mroute_to_x_vectors\u001b[0;34m(route)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[39mfor\u001b[39;00m i, hold \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(route\u001b[39m.\u001b[39mholds):\n\u001b[1;32m     22\u001b[0m     x, y \u001b[39m=\u001b[39m hold\u001b[39m.\u001b[39mcol, hold\u001b[39m.\u001b[39mrow\n\u001b[0;32m---> 23\u001b[0m     x_vectors[\u001b[39m0\u001b[39m:\u001b[39m6\u001b[39m, i] \u001b[39m=\u001b[39m feature_dict[(x, y)] \u001b[39m# hand feature encoding\u001b[39;00m\n\u001b[1;32m     24\u001b[0m     x_vectors[\u001b[39m6\u001b[39m:\u001b[39m8\u001b[39m, i] \u001b[39m=\u001b[39m [x, y] \u001b[39m# coordinate encoding\u001b[39;00m\n\u001b[1;32m     25\u001b[0m n_holds \u001b[39m=\u001b[39m route\u001b[39m.\u001b[39mnum_holds()\n",
-      "\u001b[0;31mKeyError\u001b[0m: (3, 18)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MoonboardRoute(holds=[MoonBoardRouteHold(row=6, col=2, is_start=False, is_end=False), MoonBoardRouteHold(row=8, col=3, is_start=False, is_end=False), MoonBoardRouteHold(row=10, col=1, is_start=False, is_end=False), MoonBoardRouteHold(row=12, col=4, is_start=False, is_end=False), MoonBoardRouteHold(row=14, col=1, is_start=False, is_end=False), MoonBoardRouteHold(row=17, col=3, is_start=False, is_end=False), MoonBoardRouteHold(row=4, col=5, is_start=True, is_end=False), MoonBoardRouteHold(row=17, col=3, is_start=False, is_end=True)], id=UUID('d7cb4a3e-4e5a-11ed-b585-75fef8b24d54'))\n",
+      "[[ 0.  0.  1.  0.  1.  2.  5.  2.]\n",
+      " [ 1.  0.  5.  3.  3.  6.  4.  6.]\n",
+      " [ 3.  1.  3.  6.  5.  8.  9.  8.]\n",
+      " [ 1.  5.  3.  3.  4.  6.  4.  6.]\n",
+      " [ 0.  1.  0.  0.  1.  2.  1.  2.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  1.  0.]\n",
+      " [ 2.  3.  1.  4.  1.  3.  5.  3.]\n",
+      " [ 6.  8. 10. 12. 14. 17.  4. 17.]\n",
+      " [ 1.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  1.]]\n"
      ]
     }
    ],
@@ -36,18 +52,11 @@
     "end_hold = 'D18'\n",
     "others = ['C7', 'D9', 'B11', 'E13', 'B15', 'D18']\n",
     "route = MoonboardRoute.from_hold_strings(others, start_holds, end_hold)\n",
-    "beta = find_route_beta(route)\n",
+    "x_vectors = route_to_x_vectors(route)\n",
     "print(route)\n",
-    "print(beta)\n",
+    "print(x_vectors)\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -71,7 +80,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
