reallowed multiple end holds

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -6,33 +6,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from structs import MoonboardRoute\n",
+    "from structs import MoonBoardRoute\n",
     "from MoonBoardRNN.BetaMove.preprocessing_helper import generate_organized_sequence_data\n",
     "from MoonBoardRNN.BetaMove.BetaMove import route_to_x_vectors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "After Beamer search, the most possible hand sequence and the successRate:\n",
-      "['C7', 'C7', 'D9', 'B11', 'E13', 'B15', 'D18']\n",
-      "[0, 0, 1, 2, 3, 4, 7] ['LH', 'RH', 'RH', 'LH', 'RH', 'LH', 'RH'] [61.17114734]\n",
-      "MoonboardRoute(holds=[MoonBoardRouteHold(row=6, col=2, is_start=False, is_end=False), MoonBoardRouteHold(row=8, col=3, is_start=False, is_end=False), MoonBoardRouteHold(row=10, col=1, is_start=False, is_end=False), MoonBoardRouteHold(row=12, col=4, is_start=False, is_end=False), MoonBoardRouteHold(row=14, col=1, is_start=False, is_end=False), MoonBoardRouteHold(row=17, col=3, is_start=False, is_end=False), MoonBoardRouteHold(row=4, col=5, is_start=True, is_end=False), MoonBoardRouteHold(row=17, col=3, is_start=False, is_end=True)], id=UUID('a7f41838-4ff7-11ed-92cc-e12144d9ac45'))\n"
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/tyebkhad/GeneticBoulders/testing.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m end_hold \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mD18\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m others \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mC7\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mD9\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mB11\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mE13\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mB15\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mD18\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m route \u001b[39m=\u001b[39m MoonBoardRoute\u001b[39m.\u001b[39;49mfrom_hold_strings(others, start_holds, end_hold)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m x_vectors \u001b[39m=\u001b[39m route_to_x_vectors(route)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(route)\n",
+      "File \u001b[0;32m~/GeneticBoulders/structs.py:65\u001b[0m, in \u001b[0;36mMoonBoardRoute.from_hold_strings\u001b[0;34m(start, mid, end)\u001b[0m\n\u001b[1;32m     63\u001b[0m start_holds \u001b[39m=\u001b[39m MoonBoardHold\u001b[39m.\u001b[39mfrom_string_list(start)\n\u001b[1;32m     64\u001b[0m mid_holds \u001b[39m=\u001b[39m MoonBoardHold\u001b[39m.\u001b[39mfrom_string_list(mid)\n\u001b[0;32m---> 65\u001b[0m end_holds \u001b[39m=\u001b[39m MoonBoardHold\u001b[39m.\u001b[39;49mfrom_string_list(end)\n\u001b[1;32m     66\u001b[0m \u001b[39mreturn\u001b[39;00m MoonBoardRoute(start_holds, mid_holds, end_holds)\n",
+      "File \u001b[0;32m~/GeneticBoulders/structs.py:36\u001b[0m, in \u001b[0;36mMoonBoardHold.from_string_list\u001b[0;34m(strlist)\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfrom_string_list\u001b[39m(strlist: List[\u001b[39mstr\u001b[39m]):\n\u001b[0;32m---> 36\u001b[0m     \u001b[39mreturn\u001b[39;00m [MoonBoardHold\u001b[39m.\u001b[39mfrom_string(s) \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m strlist]\n",
+      "File \u001b[0;32m~/GeneticBoulders/structs.py:36\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfrom_string_list\u001b[39m(strlist: List[\u001b[39mstr\u001b[39m]):\n\u001b[0;32m---> 36\u001b[0m     \u001b[39mreturn\u001b[39;00m [MoonBoardHold\u001b[39m.\u001b[39;49mfrom_string(s) \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m strlist]\n",
+      "File \u001b[0;32m~/GeneticBoulders/structs.py:33\u001b[0m, in \u001b[0;36mMoonBoardHold.from_string\u001b[0;34m(coords)\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfrom_string\u001b[39m(coords: \u001b[39mstr\u001b[39m):\n\u001b[0;32m---> 33\u001b[0m     \u001b[39mreturn\u001b[39;00m MoonBoardHold(row\u001b[39m=\u001b[39mmoonboard_row_to_index(\u001b[39mint\u001b[39;49m(coords[\u001b[39m1\u001b[39;49m:])), col\u001b[39m=\u001b[39mmoonboard_col_to_index(coords[\u001b[39m0\u001b[39m]))\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
    "source": [
     "# Test Route - PULL YASELF UP! YAY, V4 set by Hoseok Lee\n",
     "start_holds = ['F5']\n",
-    "end_hold = 'D18'\n",
+    "end_holds = ['D18']\n",
     "others = ['C7', 'D9', 'B11', 'E13', 'B15', 'D18']\n",
-    "route = MoonboardRoute.from_hold_strings(others, start_holds, end_hold)\n",
+    "route = MoonBoardRoute.from_hold_strings(others, start_holds, end_holds)\n",
     "x_vectors = route_to_x_vectors(route)\n",
     "print(route)\n",
     "print(route.starting_holds())\n",
@@ -40,13 +45,6 @@
     "#print(x_vectors)\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
