--- a/testing.ipynb
+++ b/testing.ipynb
@@ -17,18 +17,24 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After Beamer search, the most possible hand sequence and the successRate:\n",
+      "['F5', 'F5', 'C7', 'D9', 'B11', 'E13', 'B15', 'D18']\n",
+      "[0, 0, 1, 2, 3, 4, 5, 7] ['LH', 'RH', 'LH', 'RH', 'LH', 'RH', 'LH', 'RH'] [83.49613078]\n",
+      "MoonBoardRoute(mid_holds=[MoonBoardHold(row=6, col=2), MoonBoardHold(row=8, col=3), MoonBoardHold(row=10, col=1), MoonBoardHold(row=12, col=4), MoonBoardHold(row=14, col=1), MoonBoardHold(row=17, col=3)], start_holds=[MoonBoardHold(row=4, col=5)], end_holds=[MoonBoardHold(row=17, col=3)], id=UUID('10cf3db6-5001-11ed-92cc-e12144d9ac45'))\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'MoonBoardRoute' object has no attribute 'starting_holds'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/home/tyebkhad/GeneticBoulders/testing.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m end_hold \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mD18\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m others \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mC7\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mD9\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mB11\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mE13\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mB15\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mD18\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m route \u001b[39m=\u001b[39m MoonBoardRoute\u001b[39m.\u001b[39;49mfrom_hold_strings(others, start_holds, end_hold)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m x_vectors \u001b[39m=\u001b[39m route_to_x_vectors(route)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(route)\n",
-      "File \u001b[0;32m~/GeneticBoulders/structs.py:65\u001b[0m, in \u001b[0;36mMoonBoardRoute.from_hold_strings\u001b[0;34m(start, mid, end)\u001b[0m\n\u001b[1;32m     63\u001b[0m start_holds \u001b[39m=\u001b[39m MoonBoardHold\u001b[39m.\u001b[39mfrom_string_list(start)\n\u001b[1;32m     64\u001b[0m mid_holds \u001b[39m=\u001b[39m MoonBoardHold\u001b[39m.\u001b[39mfrom_string_list(mid)\n\u001b[0;32m---> 65\u001b[0m end_holds \u001b[39m=\u001b[39m MoonBoardHold\u001b[39m.\u001b[39;49mfrom_string_list(end)\n\u001b[1;32m     66\u001b[0m \u001b[39mreturn\u001b[39;00m MoonBoardRoute(start_holds, mid_holds, end_holds)\n",
-      "File \u001b[0;32m~/GeneticBoulders/structs.py:36\u001b[0m, in \u001b[0;36mMoonBoardHold.from_string_list\u001b[0;34m(strlist)\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfrom_string_list\u001b[39m(strlist: List[\u001b[39mstr\u001b[39m]):\n\u001b[0;32m---> 36\u001b[0m     \u001b[39mreturn\u001b[39;00m [MoonBoardHold\u001b[39m.\u001b[39mfrom_string(s) \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m strlist]\n",
-      "File \u001b[0;32m~/GeneticBoulders/structs.py:36\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfrom_string_list\u001b[39m(strlist: List[\u001b[39mstr\u001b[39m]):\n\u001b[0;32m---> 36\u001b[0m     \u001b[39mreturn\u001b[39;00m [MoonBoardHold\u001b[39m.\u001b[39;49mfrom_string(s) \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m strlist]\n",
-      "File \u001b[0;32m~/GeneticBoulders/structs.py:33\u001b[0m, in \u001b[0;36mMoonBoardHold.from_string\u001b[0;34m(coords)\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfrom_string\u001b[39m(coords: \u001b[39mstr\u001b[39m):\n\u001b[0;32m---> 33\u001b[0m     \u001b[39mreturn\u001b[39;00m MoonBoardHold(row\u001b[39m=\u001b[39mmoonboard_row_to_index(\u001b[39mint\u001b[39;49m(coords[\u001b[39m1\u001b[39;49m:])), col\u001b[39m=\u001b[39mmoonboard_col_to_index(coords[\u001b[39m0\u001b[39m]))\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/home/tyebkhad/GeneticBoulders/testing.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m x_vectors \u001b[39m=\u001b[39m route_to_x_vectors(route)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(route)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mprint\u001b[39m(route\u001b[39m.\u001b[39;49mstarting_holds())\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(route\u001b[39m.\u001b[39mending_holds())\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'MoonBoardRoute' object has no attribute 'starting_holds'"
      ]
     }
    ],
@@ -37,11 +43,8 @@
     "start_holds = ['F5']\n",
     "end_holds = ['D18']\n",
     "others = ['C7', 'D9', 'B11', 'E13', 'B15', 'D18']\n",
-    "route = MoonBoardRoute.from_hold_strings(others, start_holds, end_holds)\n",
+    "route = MoonBoardRoute.from_hold_strings(start_holds, others, end_holds)\n",
     "x_vectors = route_to_x_vectors(route)\n",
-    "print(route)\n",
-    "print(route.starting_holds())\n",
-    "print(route.ending_holds())\n",
     "#print(x_vectors)\n",
     "\n"
    ]
