--- a/testing.ipynb
+++ b/testing.ipynb
@@ -4,11 +4,26 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-10-19 19:15:32.332183: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX_VNNI FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2022-10-19 19:15:32.406827: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2022-10-19 19:15:32.424711: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2022-10-19 19:15:33.539054: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/cuda-11.7/lib64\n",
+      "2022-10-19 19:15:33.539141: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/cuda-11.7/lib64\n",
+      "2022-10-19 19:15:33.539149: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+     ]
+    }
+   ],
    "source": [
     "from structs import MoonBoardRoute\n",
     "from MoonBoardRNN.BetaMove.preprocessing_helper import generate_organized_sequence_data\n",
-    "from MoonBoardRNN.BetaMove.BetaMove import route_to_x_vectors"
+    "from MoonBoardRNN.BetaMove.BetaMove import route_to_x_vectors\n",
+    "from MoonBoardRNN.GradeNet.grade_net import GradeNet"
    ]
   },
   {
@@ -22,19 +37,31 @@
      "text": [
       "After Beamer search, the most possible hand sequence and the successRate:\n",
       "['F5', 'F5', 'C7', 'D9', 'B11', 'E13', 'B15', 'D18']\n",
-      "[0, 0, 1, 2, 3, 4, 5, 7] ['LH', 'RH', 'LH', 'RH', 'LH', 'RH', 'LH', 'RH'] [83.49613078]\n",
-      "MoonBoardRoute(mid_holds=[MoonBoardHold(row=6, col=2), MoonBoardHold(row=8, col=3), MoonBoardHold(row=10, col=1), MoonBoardHold(row=12, col=4), MoonBoardHold(row=14, col=1), MoonBoardHold(row=17, col=3)], start_holds=[MoonBoardHold(row=4, col=5)], end_holds=[MoonBoardHold(row=17, col=3)], id=UUID('10cf3db6-5001-11ed-92cc-e12144d9ac45'))\n"
+      "[0, 0, 1, 2, 3, 4, 5, 7] ['LH', 'RH', 'LH', 'RH', 'LH', 'RH', 'LH', 'RH'] [83.49613078]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-10-19 19:15:35.966466: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-10-19 19:15:35.983973: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudnn.so.8'; dlerror: libcudnn.so.8: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/cuda-11.7/lib64\n",
+      "2022-10-19 19:15:35.983988: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1934] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n",
+      "2022-10-19 19:15:35.984389: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX_VNNI FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
     {
      "ename": "AttributeError",
-     "evalue": "'MoonBoardRoute' object has no attribute 'starting_holds'",
+     "evalue": "type object 'GradeNet' has no attribute 'route_to_input'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/tyebkhad/GeneticBoulders/testing.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m x_vectors \u001b[39m=\u001b[39m route_to_x_vectors(route)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(route)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mprint\u001b[39m(route\u001b[39m.\u001b[39;49mstarting_holds())\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(route\u001b[39m.\u001b[39mending_holds())\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'MoonBoardRoute' object has no attribute 'starting_holds'"
+      "\u001b[1;32m/home/tyebkhad/GeneticBoulders/testing.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m x_vectors \u001b[39m=\u001b[39m route_to_x_vectors(route)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m net \u001b[39m=\u001b[39m GradeNet()\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m grade \u001b[39m=\u001b[39m net\u001b[39m.\u001b[39;49mgrade_route(x_vectors)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/tyebkhad/GeneticBoulders/testing.ipynb#W4sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(grade)\n",
+      "File \u001b[0;32m~/GeneticBoulders/MoonBoardRNN/GradeNet/grade_net.py:61\u001b[0m, in \u001b[0;36mGradeNet.grade_route\u001b[0;34m(self, route)\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mgrade_route\u001b[39m(\u001b[39mself\u001b[39m, route: MoonBoardRoute) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mint\u001b[39m:\n\u001b[0;32m---> 61\u001b[0m \tpred \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__model\u001b[39m.\u001b[39mpredict(GradeNet\u001b[39m.\u001b[39;49mroute_to_input(route))\n\u001b[1;32m     62\u001b[0m \t\u001b[39mreturn\u001b[39;00m convert_num_to_V_grade(pred)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: type object 'GradeNet' has no attribute 'route_to_input'"
      ]
     }
    ],
@@ -44,7 +71,10 @@
     "end_holds = ['D18']\n",
     "others = ['C7', 'D9', 'B11', 'E13', 'B15', 'D18']\n",
     "route = MoonBoardRoute.from_hold_strings(start_holds, others, end_holds)\n",
-    "x_vectors = route_to_x_vectors(route)\n",
+    "#x_vectors = route_to_x_vectors(route)\n",
+    "net = GradeNet()\n",
+    "grade = net.grade_route(route)\n",
+    "print(grade)\n",
     "#print(x_vectors)\n",
     "\n"
    ]
